--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "node dist/app.js",
+    "start": "git status && npm run build ",
     "dev": "nodemon dist/app.js"
   },
   "keywords": [],
@@ -14,6 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.12.1",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/winston": "^2.4.4",
     "apidoc": "^1.2.0",
     "bcryptjs": "^2.4.3",
     "bee-queue": "^1.7.1",
