--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^5.13.0",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/uuid": "^9.0.8",
     "@types/winston": "^2.4.4",
     "apidoc": "^1.2.0",
     "bcrypt": "^5.1.1",
@@ -35,6 +36,7 @@
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "passport": "^0.7.0",
+    "uuid": "^9.0.1",
     "winston": "^3.13.0",
     "zod": "^3.23.0"
   },
